Fix “View” button alignment in horizontal form that filters incentive level history

--- a/assets/scss/components/_horizontal-content.scss
+++ b/assets/scss/components/_horizontal-content.scss
@@ -44,7 +44,7 @@
     }
 
     > .govuk-button-group {
-      align-self: flex-end;
+      align-self: center;
 
       .govuk-button {
         margin-bottom: $govuk-border-width-form-element;
